deployments/wordpress-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose-resolved.yaml
    kompose.version: 1.35.0 (HEAD)
  labels:
    io.kompose.service: wordpress
  name: wordpress
  namespace: staging-mywp
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: wordpress
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose-resolved.yaml
        kompose.version: 1.35.0 (HEAD)
      labels:
        io.kompose.service: wordpress
    spec:
      containers:
        - env:
            - name: WORDPRESS_DB_HOST
              value: db
            - name: WORDPRESS_DB_NAME
              value: wordpress
            - name: WORDPRESS_DB_PASSWORD
              value: wordpress
            - name: WORDPRESS_DB_USER
              value: wordpress
          image: harbor.korporate.org/mywp/wordpress:main-5dbd3b1f46646aa7ac9979c2d76e1b789ac3fff9
          name: wordpress
          ports:
            - containerPort: 80
              protocol: TCP
      restartPolicy: Always
