deployments/service-external.yml
---
apiVersion: v1
kind: Service
metadata:
  name: mywp-external
  namespace: staging-mywp
  labels:
    traefik-discover: "public"
spec:
  type: ExternalName
  externalName: "10.0.50.120"
  ports:
    - name: http
      port: 80
      protocol: TCP
