deployments/wordpress-service.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose-resolved.yaml
    kompose.version: 1.35.0 (HEAD)
  labels:
    io.kompose.service: wordpress
    traefik-discover: "public"
  name: wordpress
  namespace: staging-mywp
spec:
  type: LoadBalancer
  loadBalancerIP: 10.0.50.120
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  selector:
    io.kompose.service: wordpress
